<resources>
    <string name="app_name">NodeNest - IoT Manager</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_yet">No Account yet?</string>
    <string name="register">Register</string>
    <string name="create_account">Create Your Account</string>
    <string name="email">Email</string>
    <string name="returnWord">Return</string>
    <string name="action">Details</string>
    <string name="measurement">Measurement</string>
    <string name="status_active">Status: Active</string>
    <string name="device_name">Device Name</string>
    <string name="add_a_new_device">Add a new device</string>
    <string name="logout">Logout</string>
</resources>