<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="16dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardContentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="8dp">
        <TextView
            android:id="@+id/deviceName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/device_name"/>

        <TextView
            android:id="@+id/latestMeasurement"
            android:layout_width="180dp"
            android:layout_height="81dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/measurement"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/deviceStatus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deviceName"/>

        <TextView
            android:id="@+id/deviceStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/status_active"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/latestMeasurement"
            app:layout_constraintTop_toTopOf="@+id/latestMeasurement" />

        <androidx.appcompat.widget.AppCompatButton
        android:background="#2E5091"
        android:textColor="@color/white"
            android:id="@+id/actionButton"
            android:layout_width="116dp"
            android:layout_height="46dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/action"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/latestMeasurement"
            app:layout_constraintTop_toBottomOf="@id/deviceStatus" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
